--- a/css/pubzone.css
+++ b/css/pubzone.css
@@ -42,3 +42,16 @@
 .pub-extras pre {
   margin-top:7px;
 }
+
+.quickfilter-check {
+  margin-right: 5px;
+  -webkit-transition: opacity .1s ease-in-out;
+  -moz-transition: opacity .1s ease-in-out;
+  -ms-transition: opacity .1s ease-in-out;
+  -o-transition: opacity .1s ease-in-out;
+  transition: opacity .1s ease-in-out;
+}
+
+.quickfilter-value {
+  cursor: pointer;
+}
