--- a/css/pubzone.css
+++ b/css/pubzone.css
@@ -43,6 +43,15 @@
   margin-top:7px;
 }
 
+h1.page-header {
+  width:80%;
+}
+
+.pub-export {
+  float:right;
+  margin-top:-80px;
+}
+
 .quickfilter-check {
   margin-right: 5px;
   -webkit-transition: opacity .1s ease-in-out;
